-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 7u7
-
Component/s: hotspot
-
Environment:
DISTRIB_ID=Ubuntu
DISTRIB_RELEASE=10.04
DISTRIB_CODENAME=lucid
DISTRIB_DESCRIPTION="Ubuntu 10.04.2 LTS"
-
b21
-
x86
-
linux
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8009508 | 8 | Poonam Bajaj Parhar | P4 | Closed | Fixed | b80 |
| JDK-8018033 | 7u45 | Poonam Bajaj Parhar | P4 | Closed | Fixed | b01 |
| JDK-8009491 | 7u40 | Poonam Bajaj Parhar | P4 | Closed | Fixed | b15 |
| JDK-8008970 | hs24 | Vladimir Kempik | P4 | Closed | Fixed | b34 |
=================
If an out of range value was used with -XX:G1ConfidencePercent=N, e.g. 200,
JVM may crash with following guarantee. G1ConfidencePercent value should be
validated before starting VM.
# Internal Error (numberSeq.cpp:184), pid=7292, tid=2067221360
# guarantee(variance() > -1.0) failed: variance should be >= 0
Issue Clarification
===================
Crash
If an out of range value was used with -XX:G1ConfidencePercent=N, e.g.
200, JVM may crash with following guarantee.
# Internal Error (numberSeq.cpp:184), pid=7292, tid=2067221360
# guarantee(variance() > -1.0) failed: variance should be >= 0
How often have you seen the problem?
Almost always with -XX:G1ConfidencePercent=200
How reproducable is the problem?
Run a java program which keeps allocating memory with following options.
-XX:+UseG1GC -XX:G1ConfidencePercent=200
system configuration
====================
Full output from java -version
java version "1.7.0_07"
Java(TM) SE Runtime Environment (build 1.7.0_07-b10)
Java HotSpot(TM) Server VM (build 23.3-b01, mixed mode)
- backported by
-
JDK-8008970 WRONG G1CONFIDENCEPERCENT RESULTS IN GUARANTEE(VARIANCE() > -1.0) FAILED
-
- Closed
-
-
JDK-8009491 WRONG G1CONFIDENCEPERCENT RESULTS IN GUARANTEE(VARIANCE() > -1.0) FAILED
-
- Closed
-
-
JDK-8009508 WRONG G1CONFIDENCEPERCENT RESULTS IN GUARANTEE(VARIANCE() > -1.0) FAILED
-
- Closed
-
-
JDK-8018033 WRONG G1CONFIDENCEPERCENT RESULTS IN GUARANTEE(VARIANCE() > -1.0) FAILED
-
- Closed
-
- relates to
-
JDK-8008766 G1: Non-sensical negative target marking step times
-
- Closed
-
-
JDK-8068942 Improve validation of -XX:G1ConfidencePercent value
-
- Resolved
-